button alignment fix

--- a/pregnancy-and-natural-birth-preparation/style.css
+++ b/pregnancy-and-natural-birth-preparation/style.css
@@ -313,7 +313,7 @@ header h5{
 }
 
 .b-style{
-    width: 17%; 
+    width: 15.1%; 
     margin: 5% auto;
 }
 
